# MemFuse

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  run-server.sh
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
crates/mfs-ast/: Cargo.toml
crates/mfs-ast/src/: deterministic.rs  language.rs  lib.rs  skeleton.rs
crates/mfs-ast/tests/: ast_extraction.rs
crates/mfs-cli/: Cargo.toml
crates/mfs-cli/src/: daemon.rs  doctor.rs  format.rs  helpers.rs  main.rs  maintenance.rs  resource.rs  retrieval.rs  session.rs  skill.rs  system.rs
crates/mfs-connectors/: Cargo.toml
crates/mfs-connectors/src/: connector.rs  git.rs  lib.rs  localfs.rs  url_guard.rs
crates/mfs-connectors/tests/: git_connector.rs
crates/mfs-index/: Cargo.toml
crates/mfs-index/src/: fts.rs  lib.rs  semantic.rs
crates/mfs-index/tests/: semantic_index.rs
crates/mfs-mcp/: Cargo.toml
crates/mfs-mcp/src/: lib.rs  main.rs
crates/mfs-mcp/tests/: mcp_smoke.rs
crates/mfs-memory/: Cargo.toml
crates/mfs-memory/src/: briefs.rs  budget.rs  commit_service.rs  consolidation.rs  consolidation_sleep.rs  dream_phases.rs  feedback_signal.rs  heuristics.rs  intent.rs  lib.rs  llm.rs  overlay.rs  render.rs  service.rs  t2h.rs  writeback.rs
crates/mfs-memory/src/candidates/: extract.rs  extract_llm.rs  extract_rules.rs  merge.rs  mod.rs  schema.rs
crates/mfs-memory/src/episodes/: annotate.rs  build.rs  chunk.rs  decay.rs  mod.rs  search.rs
crates/mfs-memory/src/facts/: decay.rs  extract.rs  mod.rs  project.rs
crates/mfs-metadata/: Cargo.toml
crates/mfs-metadata/src/: canvas_ref.rs  canvas_store.rs  infra_store.rs  lib.rs  memory_store.rs  overlay_store.rs  resource_store.rs  runs_store.rs  schema.rs  session_store.rs  store.rs  store_types.rs
crates/mfs-metadata/src/migrations/: 0001_initial.sql  0002_add_columns.sql  0003_heuristics.sql  0005_user_confirmed.sql  0006_citation_feedback.sql  0007_episode_embeddings.sql  0008_fts5.sql  0009_fts5_content_mode.sql  0010_source_episode_ids_json.sql  0011_webhooks.sql  0012_manifest.sql  0013_canvas_overlay.sql  0013_canvas_overlay_separate.sql  0014_prd_alignment.sql  0014_prd_alignment_canvas.sql  0014_prd_alignment_metadata.sql  0015_overlay_canvas_refs.sql  0016_manifest_yaml_nullable.sql  0017_overlay_refs_manifest_cache.sql  0017_overlay_refs_manifest_cache_canvas.sql  0018_memory_access_log.sql  0019_relations_temporal.sql  0020_run_writebacks.sql  0022_resource_business_metadata.sql  0023_episode_recall_candidate_indexes.sql
crates/mfs-ops/: Cargo.toml
crates/mfs-ops/src/: lib.rs  owned_path_ops.rs  skill_ingest.rs  status_ops.rs  wait_ops.rs  watch_ops.rs
crates/mfs-ops/src/resource/: ingest.rs  mod.rs  pack.rs  rebuild.rs  refresh.rs
crates/mfs-planning/: Cargo.toml
crates/mfs-planning/src/: lib.rs
crates/mfs-retrieval/: Cargo.toml  tests_planner_scratch.rs
crates/mfs-retrieval/src/: hierarchical.rs  jina_reranker.rs  lib.rs  planner.rs  query_plan.rs  rerank.rs  rerank_ext.rs  trajectory.rs
crates/mfs-retrieval/tests/: find_and_search.rs  query_plan.rs
crates/mfs-semantic/: Cargo.toml
crates/mfs-semantic/src/: config.rs  embedding_util.rs  jina_embedding.rs  lib.rs  pipeline.rs  providers.rs  providers_ext.rs  resilience.rs
crates/mfs-server/: Cargo.toml
crates/mfs-server/src/: auth.rs  dream.rs  error_handler.rs  lib.rs  main.rs  metrics.rs  pid_lock.rs  runtime_config.rs
crates/mfs-server/src/http/: api_types.rs  code_symbols.rs  episodes.rs  facts.rs  health.rs  heuristics.rs  manifest.rs  mod.rs  overlay.rs  relations.rs  resources.rs  runs.rs  search.rs  sessions.rs  skills.rs  snapshots.rs  tasks.rs  tickets.rs  watches.rs  webhooks.rs  workspace.rs
crates/mfs-server/src/http/canvas/: conflict.rs  generator.rs  handlers.rs  mod.rs
crates/mfs-server/src/http/memory/: admin.rs  consolidate.rs  context.rs  mod.rs  search.rs
crates/mfs-server/tests/: binary_server.rs  http_smoke.rs  rebuild_and_recovery.rs
crates/mfs-session/: Cargo.toml
crates/mfs-session/src/: archive.rs  lib.rs  lock.rs  memory.rs  query.rs  redo.rs
crates/mfs-session/tests/: memory_semantics.rs  session_commit.rs  session_surface.rs
crates/mfs-test-util/: Cargo.toml
crates/mfs-test-util/src/: lib.rs
crates/mfs-types/: Cargo.toml
crates/mfs-types/src/: decay.rs  env.rs  error.rs  identity.rs  lib.rs  math.rs  text.rs
crates/mfs-types/tests/: identity_model.rs
crates/mfs-uri/: Cargo.toml
crates/mfs-uri/src/: lib.rs
crates/mfs-uri/tests/: uri_mapping.rs
crates/mfs-workspace/: Cargo.toml
crates/mfs-workspace/src/: catalog.rs  classify.rs  fs_ops.rs  layout.rs  lib.rs  materialize.rs  summaries.rs
crates/mfs-workspace/tests/: fs_ops.rs  layered_summaries.rs  materialize_git.rs  materialize_localfs.rs  resource_catalog.rs
deploy/: memfuse-reload.sh  memfuse.service
docs/: architecture.md  user-guide.md
docs/review/: 2026-06-10-comprehensive-review.md  TODO.md
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/.claude-plugin/: plugin.json
sdk/.codex-plugin/: plugin.json
sdk/src/: index.ts
sdk/src/cli/: index.ts  output.ts  types.ts
sdk/src/client/: adapter.ts  http.ts  index.ts  ops-client.ts  render.ts  runtime-client.ts  runtime.ts  types.ts
sdk/src/hooks/: index.ts  platform-utils.ts  post-tool-use.ts  pre-compact.ts  pre-tool-use.ts  session-end.ts  session-start.ts  setup.ts  stop.ts  user-prompt-submit.ts
sdk/src/mcp/: server.ts
sdk/src/service/: manager.ts
sdk/src/setup/: install.ts  uninstall.ts
sdk/src/shared/: config.ts  http.ts  privacy.ts  router.ts  utils.ts
sdk/src/skills/: index.ts  loader.ts
sdk/tests/: claude-code-e2e-harness.test.mjs  cli.test.mjs  multi-endpoint.test.mjs  packaging.test.mjs  sdk.test.mjs  skills-build.test.mjs
sdk/tests/e2e/: claude-code-harness.mjs  claude-code-real-memory.test.mjs  codex-real-memory.test.mjs
tests/: t2h_phase1_integration.sh
tests/fixtures/localfs_docs/: api.md  auth.md  guide.md
(+25 files in other folders)
