[workspace]
members = [
    "crates/mfs-types",
    "crates/mfs-uri",
    "crates/mfs-metadata",
    "crates/mfs-connectors",
    "crates/mfs-workspace",
    "crates/mfs-index",
    "crates/mfs-semantic",
    "crates/mfs-retrieval",
    "crates/mfs-session",
    "crates/mfs-ast",
    "crates/mfs-memory",
    "crates/mfs-planning",
    "crates/mfs-ops",
    "crates/mfs-server",
    "crates/mfs-mcp",
    "crates/mfs-cli",
    "crates/mfs-test-util",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85.0"
version = "0.1.0"

[workspace.dependencies]
# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = { package = "yaml_serde", version = "0.10" }
toml = "0.8"

# Async runtime
tokio = { version = "1.51.0", features = ["fs", "rt", "sync", "macros", "time"] }

# HTTP client
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }

# Database
rusqlite = { version = "0.37.0", features = ["bundled"] }

# Error handling
thiserror = "2.0.17"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ID generation
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Regex
regex = "1.11.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Time
chrono = { version = "0.4.41", features = ["serde"] }

# Git
git2 = "0.20.2"

# CLI
clap = { version = "4.5.50", features = ["derive"] }

# HTTP server
axum = "0.8.6"

# Metrics
prometheus = "0.13.4"

# Async utilities
tokio-util = "0.7"

# HTTP middleware
tower-http = { version = "0.6", features = ["cors"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Misc
async-trait = "0.1.89"
dotenvy = "0.15.7"
libc = "0.2"
tempfile = "3.23.0"
tower = "0.5.2"

# Archive extraction
zip = "8.6.0"
assert_cmd = "2.1.1"
predicates = "3.1.3"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
large_enum_variant = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
implicit_hasher = "allow"
fallible_impl_from = "allow"
items_after_statements = "allow"
wildcard_imports = "allow"
default_trait_access = "allow"
needless_pass_by_value = "allow"
redundant_field_names = "allow"
single_match_else = "allow"
type_complexity = "allow"
doc_markdown = "allow"
uninlined_format_args = "allow"
bool_to_int_with_if = "allow"
too_many_arguments = "allow"
struct_field_names = "allow"
cast_precision_loss = "allow"
option_if_let_else = "allow"
manual_let_else = "allow"
redundant_closure_for_method_calls = "allow"
match_same_arms = "allow"
unreadable_literal = "allow"
return_self_not_must_use = "allow"
unnested_or_patterns = "allow"
trivially_copy_pass_by_ref = "allow"
struct_excessive_bools = "allow"
manual_range_contains = "allow"
missing_fields_in_debug = "allow"
explicit_iter_loop = "allow"
map_unwrap_or = "allow"
assigning_clones = "allow"
case_sensitive_file_extension_comparisons = "allow"
cloned_ref_to_slice_refs = "allow"
comparison_chain = "allow"
doc_lazy_continuation = "allow"
doc_link_with_quotes = "allow"
float_cmp = "allow"
format_push_string = "allow"
incompatible_msrv = "allow"
ref_option = "allow"
should_implement_trait = "allow"
similar_names = "allow"
unused_async = "allow"
unused_self = "allow"
