[package]
name = "mfs-cli"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []

[dependencies]
clap.workspace = true
libc.workspace = true
mfs-metadata = { path = "../mfs-metadata" }
mfs-memory = { path = "../mfs-memory" }
mfs-retrieval = { path = "../mfs-retrieval" }
mfs-session = { path = "../mfs-session" }
mfs-ops = { path = "../mfs-ops" }
mfs-types = { path = "../mfs-types" }
mfs-workspace = { path = "../mfs-workspace" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
mfs-index = { path = "../mfs-index" }
tempfile.workspace = true

[lints]
workspace = true