[package]
name = "mfs-index"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rusqlite.workspace = true
serde_json.workspace = true
mfs-types = { path = "../mfs-types" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true