[package]
name = "mfs-mcp"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []

[dependencies]
chrono.workspace = true
clap.workspace = true
mfs-metadata = { path = "../mfs-metadata" }
mfs-memory = { path = "../mfs-memory" }
mfs-retrieval = { path = "../mfs-retrieval" }
mfs-semantic = { path = "../mfs-semantic" }
mfs-ops = { path = "../mfs-ops" }
mfs-session = { path = "../mfs-session" }
mfs-types = { path = "../mfs-types" }
mfs-uri = { path = "../mfs-uri" }
mfs-workspace = { path = "../mfs-workspace" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true

[lints]
workspace = true
