[package]
name = "mfs-memory"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []

[dependencies]
mfs-metadata = { path = "../mfs-metadata" }
mfs-types = { path = "../mfs-types" }
mfs-semantic = { path = "../mfs-semantic" }
mfs-uri = { path = "../mfs-uri" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
mfs-test-util = { path = "../mfs-test-util" }

[lints]
workspace = true