[package]
name = "mfs-retrieval"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
test-support = ["dep:tempfile", "mfs-session/test-support"]

[dependencies]
async-trait.workspace = true
mfs-index = { path = "../mfs-index" }
mfs-metadata = { path = "../mfs-metadata" }
mfs-semantic = { path = "../mfs-semantic" }
mfs-types = { path = "../mfs-types" }
mfs-workspace = { path = "../mfs-workspace" }
reqwest = { workspace = true, features = ["json"] }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tempfile = { workspace = true, optional = true }
tracing.workspace = true

[dev-dependencies]
mfs-session = { path = "../mfs-session", features = ["test-support"] }
mfs-test-util = { path = "../mfs-test-util" }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
mfs-retrieval = { path = ".", features = ["test-support"] }

[lints]
workspace = true