[package]
name = "mfs-server"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
default-run = "mfs-server"

[[bin]]
name = "mfs-server"
path = "src/main.rs"

[[bin]]
name = "memfuse-server"
path = "src/main.rs"

[features]
default = []

[dependencies]
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
hex.workspace = true
hmac.workspace = true
libc.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
prometheus.workspace = true
mfs-ast = { path = "../mfs-ast" }
mfs-connectors = { path = "../mfs-connectors" }
mfs-ops = { path = "../mfs-ops" }
mfs-index = { path = "../mfs-index" }
mfs-metadata = { path = "../mfs-metadata" }
mfs-memory = { path = "../mfs-memory" }
mfs-planning = { path = "../mfs-planning" }
mfs-retrieval = { path = "../mfs-retrieval" }
mfs-semantic = { path = "../mfs-semantic" }
mfs-session = { path = "../mfs-session" }
mfs-types = { path = "../mfs-types" }
mfs-uri = { path = "../mfs-uri" }
mfs-workspace = { path = "../mfs-workspace" }
reqwest = { workspace = true, features = ["json"] }
rusqlite.workspace = true
serde.workspace = true
zip.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tempfile.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-util.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
mfs-index = { path = "../mfs-index" }
mfs-test-util = { path = "../mfs-test-util" }
tower.workspace = true

[lints]
workspace = true
